# gitbom-rs-cli

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
benches/: tree.rs
src/: main.rs
tests/: bom.rs  integration.rs  tree.rs
tests/fixtures/directory_thing/: bar.txt  foo.txt
tests/fixtures/large_directory/hello/world/: test_world_69.text
