[package]
name = "gitbom-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.6", features = ["derive"] }
gitbom = "0.1.1"
gitoid = "0.1.1"
tokio = {version = "1.17", features = ["rt-multi-thread"]}
walkdir = "2.3.2"

[dev-dependencies]
assert_cmd = "2.0.4"
predicates = "2.1"
