[package]
name = "gitbom-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gitbom = "0.1.3"
gitoid = "0.1.2"
clap = { version = "3.1.6", features = ["derive"] }
tokio = {version = "1.17", features = ["rt-multi-thread", "tracing"]}
walkdir = "2.3.2"
console-subscriber = "0.1.8"

[dev-dependencies]
assert_cmd = "2.0.4"
predicates = "2.1"